tests/bugs/break_outside_loop_609.sy
start :: fn do
    break
end

// error: $Exotic
